--- a/README
+++ b/README
@@ -80,6 +80,11 @@ cpanm:
     Allow cpanm to install modules specified via Path/File.pm
 cpanm-install:
     Setup home directory based perl environment and cpanm
+cpanm-list-locally-installed-modules:
+    List all cpanm installed perl modules
+cpanm-reinstall-local-modules:
+    Reinstall all cpanm installed perl modules (i.e. to recompile after
+    server move)
 crontab-setup:
     Add default crontab settings to existing crontab
 csvview:
