--- a/README
+++ b/README
@@ -198,6 +198,8 @@ man-online:
     Lookup a man page on the internet
 markdown-view:
     View markdown in the terminal
+mem-empty-swap-to-ram:
+    Empty swap back to ram if possible
 mysql:
     Fix mysql prompt to show real hostname - NEVER localhost
 net-find-free-port:
