--- a/README
+++ b/README
@@ -57,6 +57,8 @@ bashrc-helper-hostname:
     Format hostname for bash prompt usage
 bashrc-helper-login-name:
     Format login for bash prompt usage
+bashrc-install-tools:
+    Install tools via npm
 bashrc-linux-distribution-fix-suse:
     Script to run when logging into suse machine
 bashrc-pack:
