--- a/README
+++ b/README
@@ -176,7 +176,7 @@ grep-or:
 groups-reload-memberships:
     Start new shell to "reload" changes to the list of groups the user
     belongs to
-hd-set-spin-timout:
+hd-set-spin-timeout:
     Activate spindown and set spindown timeout on (buggy - i.e.
     Seagate) hard drives that don't do it themselfes
 html-strip:
