--- a/README
+++ b/README
@@ -280,6 +280,9 @@ perl-profile:
     Profile a perl app and display the html results
 perl-upgrade-outdated-modules:
     Upgrade installed perl modules if a new version is available
+pipe-wrapper:
+    Emulate a pipe for a program that does not support one itself like
+    eslint
 prompt-dir:
     Prompt containing only the prettified current directory
 prompt-dir-full:
