--- a/README
+++ b/README
@@ -155,6 +155,8 @@ git-ignore:
     Download and save a default .gitignore for a specific environment
 git-log-compact:
     Show compact git log
+git-log-file:
+    Show complete changes to a file in git
 git-modified:
     List all modified files since last git commit
 git-project:
