--- a/README
+++ b/README
@@ -411,7 +411,7 @@ url-encode:
 user-add:
     Add a new user to the system without hassle
 vi:
-    alias for vim
+    Setup and run vim
 vi-choose-file-from-list:
     Edit a file from a list on STDIN
 vi-from-find:
@@ -429,8 +429,8 @@ video-dvd-rip:
 video-transcode:
     Transcode a media file to x264 preserving all video, audio and
     subtitle tracks
-vim:
-    Setup and run vim
+vim-firefox:
+    Vim to use from firefox addon its-all-text
 vim-setup:
     Setup vim environment
 vim-url:
