--- a/README
+++ b/README
@@ -175,6 +175,8 @@ gnome-send-to-mail-images:
     Resize one or more images and add them as attachements
 gnome-send-to-mail-images-setup:
     Download and setup gnome-send-to-mail-images
+gnome-terminal-prevent-cursor-blinking:
+    Prevent the gnome-terminal cursor from blinking
 gotroot:
     Make sure we're running as root
 grep-and:
