--- a/README
+++ b/README
@@ -458,6 +458,8 @@ webserver-serve-current-directory.pl:
     Serve current directory files via http - perl version
 wikipedia-via-dns:
     Query wikipedia via DNS
+window-blink:
+    Blink current window
 x2x-east:
     Share input devices with another host
 xdg-cache-home:
