--- a/README
+++ b/README
@@ -112,6 +112,9 @@ diff-so-fancy:
     Install diff-so-fancy
 dir-diff:
     Diff two directory structures
+dir-diff-by-contents:
+    Diff 2 directories recursively comparing file contents and not file
+    attributes
 dir-name-prettifier:
     shorten prompt dir to max 15 chars
 docker-ls:
@@ -273,7 +276,7 @@ nvm-setup:
     Setup nvm (node version manager)
 once:
     Print stdin once if it has changed since last time
-passwort-generate:
+password-generate:
     Generate a list of random and secure passwords
 path-grep:
     Find an executable in path
