rename archive to archive-mv-to ; add archive

--- a/README
+++ b/README
@@ -29,7 +29,9 @@ apt-popularity:
 apt-unhold-package:
     Return a deb package to its default upgrade state
 archive:
-    Archive a file appending a timestamp
+    Copy a file to ~/backups/ appending a timestamp
+archive-mv-to:
+    Move a file to ~/backups/ appending a timestamp
 audio-file-prefix-track-number:
     Add a leading two digit track number to the file name
 audio-ogg-from-any:
