--- a/README
+++ b/README
@@ -323,6 +323,8 @@ pm2-logrotate-config:
     Display the config of the logrotate module of pm2
 pm2-setup:
     Setup pm2 including log rotation
+projects-start:
+    Start all local projects that have a start script
 prompt-dir:
     Prompt containing only the prettified current directory
 prompt-dir-full:
