--- a/README
+++ b/README
@@ -10,6 +10,8 @@ in your path.
 
 Descriptions:
 
+.gitignore:
+    Logs
 H:
     Open --help output in vi
 abs:
@@ -112,8 +114,6 @@ df:
     Cleaned up df version
 diff-so-fancy:
     Install diff-so-fancy
-dir-diff:
-    Diff two directory structures
 dir-diff-by-contents:
     Diff 2 directories recursively comparing file contents and not file
     attributes
@@ -280,6 +280,8 @@ nvm-setup:
     Setup nvm (node version manager)
 once:
     Print stdin once if it has changed since last time
+package.json:
+    TODO
 password-generate:
     Generate a list of random and secure passwords
 path-grep:
@@ -422,6 +424,8 @@ trash:
     Move a file to a trash dir at the files location
 tree:
     List a directory as a tree
+tree-diff:
+    Diff two directory structures
 ubuntu-setup:
     Stuff to do after a new ubuntu installation
 ubuntu-setup-automatic-updates:
