rename to not interfere with git

--- a/README
+++ b/README
@@ -398,8 +398,6 @@ sort-by-file-modification:
     Sort a list of file names by their modification time
 sort-by-path-depth:
     Sort input by depth of path
-ssh:
-    Send remote host alias to remote host to display in prompt etc
 ssh-agent-env-clear:
     Remove connection to ssh-agent
 ssh-agent-env-grab:
@@ -407,6 +405,8 @@ ssh-agent-env-grab:
     session or on
 ssh-agent-env-restore:
     Dump ssh-agent vars stored by ssh-agent-env-grab
+ssh-alias:
+    Send remote host alias to remote host to display in prompt etc
 ssh-copy-id-my:
     Copy one public key instead of all
 ssh-no-check:
