--- a/README
+++ b/README
@@ -273,6 +273,8 @@ mem-empty-swap-to-ram:
     Empty swap back to ram if possible
 mem-swap-per-process:
     Show swap usage per process
+mybackup:
+    create a backup
 mysql:
     Fix mysql prompt to show real hostname - NEVER localhost
 mysqldump-structure:
