--- a/README
+++ b/README
@@ -298,7 +298,9 @@ net-wlan-rtl8723be-wrong-antenna-fix:
 node-install:
     Install latest node version
 note:
-    File of notes and a way to query them
+    View quick notes in notes.md file
+notes.md:
+    Ubuntu Setup
 npm-readme:
     Find and print README.md of node executable
 npm-set-global-modules-dir:
@@ -436,6 +438,8 @@ ssl-create-self-signed-certificate:
     Create a self signed certificate
 ssl-strip:
     Remove ssl encryption from https and other protocols
+sudo.:
+    Keep path with sudo
 text-context-grep:
     Grep for a regex and display matches with context
 text-from-any:
@@ -469,10 +473,10 @@ tree:
     List a directory as a tree
 tree-diff:
     Diff two directory structures
-ubuntu-setup:
-    Stuff to do after a new ubuntu installation
 ubuntu-setup-automatic-updates:
     Make sure update and backports soures are activated
+ubuntu-setup-firewall:
+    Setup default firewall and rules
 ubuntu-unity-set-time-format:
     Set time format of ubuntu unity desktop clock
 uniq-unsorted:
